# comet

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  imgui.ini  install.bat  justfile
Comet/: CMakeLists.txt
Comet-Editor/: CMakeLists.txt  main.cpp
Comet-Editor/Resources/Shaders/: PositionTexture.vert  PositionTextureNormal.frag  PositionTextureNormal.vert
Comet-Editor/source/: CrashDiagnostics.cpp  CrashDiagnostics.h  ResourcePaths.h
Comet-Editor/source/Entities/: Player.cpp  Player.h
Comet-Editor/source/Layers/: Crosshair.cpp  Crosshair.h  RenderSettings.cpp  RenderSettings.h
Comet-Editor/source/World/: Block.cpp  Block.h  BlockLibrary.h  Chunk.cpp  Chunk.h  World.cpp  World.h
Comet/include/: Engine.h  Utilities.hpp  Window.h
Comet/include/Entities/: EntityManager.hpp
Comet/include/Input/: Input.h  Input.hpp  KeyboardKeyCodes.hpp
Comet/include/Layer/: Layer.hpp  LayerManager.hpp
Comet/include/Physics/: Collision.h
Comet/include/Renderer/: Geometry.h  Mesh.h  Mesh.hpp  Renderer.h  Renderer.hpp  TextureMap.hpp
Comet/source/: Engine.cpp  Engine.h  Timer.cpp  Timer.h  Utilities.h  Window.cpp  Window.h
Comet/source/Comet/: Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  Renderer.cpp  Renderer.hpp  Timer.cpp  Utilities.hpp  Window.cpp  Window.hpp
Comet/source/Comet/Entities/: Entity.hpp
Comet/source/Comet/Input/: Input.hpp
Comet/source/Comet/Interfaces/: Interface.hpp  InterfaceManager.hpp
Comet/source/Comet/Physics/: Constants.hpp
Comet/source/Comet/Renderer/: Geometry.hpp  Mesh.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureMap.cpp  Vertex.hpp
Comet/source/Entities/: Entity.h  EntityManager.h
Comet/source/Input/: Input.h  KeyboardKeyCodes.h  MouseButtonCodes.h
Comet/source/Layer/: Layer.h  LayerManager.h
Comet/source/Physics/: Collision.h  Constants.h  VoxelCollision.h
Comet/source/Profiler/: Profiler.cpp  Profiler.h
Comet/source/Renderer/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureMap.cpp  Vertex.h  ViewCamera.cpp  ViewCamera.h
Sandbox/: CMakeLists.txt  Main.cpp
Sandbox/Shaders/: PositionTextureNormal.frag  PositionTextureNormal.vert
Sandbox/include/Entities/: Player.hpp
Sandbox/include/Layers/: Crosshair.hpp  RenderSettings.hpp
Sandbox/include/World/: Block.hpp  BlockLibrary.hpp  Chunk.hpp  ChunkGenerator.hpp  World.hpp
Sandbox/source/Entities/: Player.cpp  Player.h
Sandbox/source/Layers/: Crosshair.cpp  Crosshair.h  RenderSettings.cpp  RenderSettings.h
Sandbox/source/Sandbox/Entities/: Player.cpp  Player.hpp
Sandbox/source/Sandbox/Interfaces/: Crosshair.cpp  Crosshair.hpp  CrosshairInterface.cpp  RenderInterface.cpp  RenderInterface.hpp  RenderSettings.cpp
Sandbox/source/Sandbox/World/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  ChunkGenerator.hpp  World.cpp  World.hpp
Sandbox/source/World/: Block.cpp  Chunk.cpp  World.cpp  World.h
game/: Main.cpp
game/entities/: Player.cpp  Player.h
game/interfaces/: CrosshairInterface.cpp  CrosshairInterface.h  RenderInterface.cpp  RenderInterface.h
game/shaders/: PositionTexture.vert  PositionTextureNormal.frag  block.frag
game/world/: Block.cpp  Block.h  BlockGeometry.h  BlockLibrary.h  Chunk.cpp  Chunk.h  ChunkGenerator.h  World.cpp  World.h
source/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  Timer.h  Utilities.h  Window.cpp  Window.h
source/handlers/: Callbacks.h  Entity.h  EntityHandler.cpp  EntityHandler.h  ErrorHandler.cpp  ErrorHandler.h  EventHandler.cpp  EventHandler.h  Input.h  Interface.h  InterfaceHandler.h  KeyboardHandler.cpp  KeyboardHandler.h  KeyboardKeyCodes.h  MouseButtonCodes.h  MouseHandler.cpp  MouseHandler.h  Window.h  WindowHandler.cpp  WindowHandler.h
source/input/: Callbacks.h  Input.h  KeyboardKeyCodes.h  MouseButtonCodes.h
source/physics/: Collision.h  CollisionDetection.h  Gravity.h
source/render/: Geometry.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureMap.cpp  TextureMap.h  Vertex.h
utilities/: todo.txt
windows/Sandbox/: imgui.ini
windows/Sandbox/Shaders/: PositionTexture.frag  PositionTextureNormal.vert
